testing_workspace/fmul_data/gcc.txt
fmul_data/add.c: In function ‘main’:
fmul_data/add.c:7:3: warning: implicit declaration of function ‘asm’ [-Wimplicit-function-declaration]
    7 |   asm (
      |   ^~~
fmul_data/add.c:9:26: error: expected ‘)’ before ‘:’ token
    9 |       "mov $2, %%ebx\n\t"                 // load 2 into ebx
      |                          ^
      |                          )
......
   19 |       :                               // Outputs
      |       ~                   
fmul_data/add.c:23:5: warning: implicit declaration of function ‘usleep’; did you mean ‘sleep’? [-Wimplicit-function-declaration]
   23 |     usleep(200000);                   // 0.1 s
      |     ^~~~~~
      |     sleep
